# SUMM-Hub

./: .gitignore  CLAUDE.md  DEPLOY.md  README.md  consumers.yaml  docker-compose.yml
consumer/claude-code-consumer/: .dockerignore  .gitignore  Dockerfile  package-lock.json  package.json  vitest.config.ts
consumer/feishu-connector/: .dockerignore  .env.example  Dockerfile  README.md  VERIFICATION.md  docker-compose.e2e.yml  docker-compose.yml  package-lock.json  package.json  test-feishu-ws.js  tsconfig.json  verify.sh
consumer/feishu-consumer/: Dockerfile  Dockerfile.e2e  README.md  docker-compose.e2e.yml  package-lock.json  package.json  tsconfig.e2e.json  tsconfig.json
consumer/script-consumer/: .dockerignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json
docs/: capabilities.md  consumer-guide.md  error-handling.md  getting-started.md  index.md  message-format.md  producer-guide.md  protocol.md  subject-design.md
docs/design/: ai-message-processing-layer-summary.md  ai-message-processing-layer.md  claude-code-consumer.md
examples/go/: go.mod  main.go
examples/typescript/: package.json
nats/: server.conf
nats/streams/: ai.conf  notify.conf
scripts/: health-check.sh  setup-streams.sh
summctl/: Cargo.toml
summctl/src/: cli.rs  config.rs  discover.rs  docker.rs  error.rs  main.rs  status.rs  topology.rs
web/: DEPLOY-ARM64.md  README.md  build-arm64-images.sh  docker-compose.arm64.yml  docker-compose.e2e.yml  docker-compose.yml  load-images.sh
web/backend/: Dockerfile  package-lock.json  package.json  tsconfig.json
(+104 files in other folders)
