[package]
name = "summctl"
version = "0.1.0"
edition = "2021"
description = "SUMM-Hub Consumer Management CLI"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
regex = "1"

[dev-dependencies]
tempfile = "3"
